; ModuleID = '/home/carl/AnghaBench/timescaledb/src/extr_chunk_insert_state.c_get_adjusted_projection_info_returning.c'
source_filename = "/home/carl/AnghaBench/timescaledb/src/extr_chunk_insert_state.c_get_adjusted_projection_info_returning.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_6__ = type { i32 }

@NIL = common dso_local global i32* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (%struct.TYPE_6__* (%struct.TYPE_6__*, i32*, i32*, i32, i32, i32, i32)* @get_adjusted_projection_info_returning to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal %struct.TYPE_6__* @get_adjusted_projection_info_returning(%struct.TYPE_6__* %0, i32* %1, i32* %2, i32 %3, i32 %4, i32 %5, i32 %6) #0 {
  %8 = alloca %struct.TYPE_6__*, align 8
  %9 = alloca i32*, align 8
  %10 = alloca i32*, align 8
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  %14 = alloca i32, align 4
  %15 = alloca i32, align 4
  store %struct.TYPE_6__* %0, %struct.TYPE_6__** %8, align 8
  store i32* %1, i32** %9, align 8
  store i32* %2, i32** %10, align 8
  store i32 %3, i32* %11, align 4
  store i32 %4, i32* %12, align 4
  store i32 %5, i32* %13, align 4
  store i32 %6, i32* %14, align 4
  %16 = load i32*, i32** %9, align 8
  %17 = load i32*, i32** @NIL, align 8
  %18 = icmp ne i32* %16, %17
  %19 = zext i1 %18 to i32
  %20 = call i32 @Assert(i32 %19)
  %21 = load i32*, i32** %9, align 8
  %22 = load i32, i32* %12, align 4
  %23 = load i32*, i32** %10, align 8
  %24 = load i32, i32* %11, align 4
  %25 = load i32, i32* %13, align 4
  %26 = call i64 @map_variable_attnos_compat(i32* %21, i32 %22, i32 0, i32* %23, i32 %24, i32 %25, i32* %15)
  %27 = inttoptr i64 %26 to i32*
  store i32* %27, i32** %9, align 8
  %28 = load i32*, i32** %9, align 8
  %29 = load %struct.TYPE_6__*, %struct.TYPE_6__** %8, align 8
  %30 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %29, i32 0, i32 0
  %31 = load i32, i32* %30, align 4
  %32 = load %struct.TYPE_6__*, %struct.TYPE_6__** %8, align 8
  %33 = call i32 @get_projection_info_slot_compat(%struct.TYPE_6__* %32)
  %34 = load i32, i32* %14, align 4
  %35 = call %struct.TYPE_6__* @ExecBuildProjectionInfoCompat(i32* %28, i32 %31, i32 %33, i32* null, i32 %34)
  ret %struct.TYPE_6__* %35
}

declare dso_local i32 @Assert(i32) #1

declare dso_local i64 @map_variable_attnos_compat(i32*, i32, i32, i32*, i32, i32, i32*) #1

declare dso_local %struct.TYPE_6__* @ExecBuildProjectionInfoCompat(i32*, i32, i32, i32*, i32) #1

declare dso_local i32 @get_projection_info_slot_compat(%struct.TYPE_6__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
